# wasm-bindgen-rayon

./: .gitignore  203.index.js  291.index.js  353.index.js  363.index.js  413.index.js  419.index.js  443.index.js  522.index.js  54.index.js  67.index.js  700.index.js  713.index.js  979.index.js  Cargo.toml  README.md  index.html  index.js
.github/workflows/: ci.yml  deploy.yml  node.js.yml  toc.yml
demo/: Cargo.toml  README.md  _headers  build.sh  index.html  index.js  package-lock.json  package.json  wasm-worker.js
demo/src/: lib.rs
src/: lib.rs  workerHelpers.js  workerHelpers.no-bundler.js
test/: Cargo.toml  README.md  index.html  index.js  index.worker.js  package-lock.json  package.json  puppeteer.js  rollup.config.js  rollup.config.mjs  run-tests.js  run-tests.mjs  rust-toolchain  serve.json  test.html  test.sh  webpack.config.js  webpack.config.mjs
test/.cargo/: config
test/pkg/: package.json  test.d.ts  test.js  test_bg.wasm  test_bg.wasm.d.ts
test/pkg/parcel/: index.8307c62b.js  index.8307c62b.js.map  index.html  index.worker.c60c7378.js  index.worker.c60c7378.js.map  test.3645dfa4.js  test.3645dfa4.js.map  workerHelpers.4e9e3c97.js  workerHelpers.4e9e3c97.js.map
test/pkg/rollup/: index.js  index.worker-8a693ebb.js  test-ef671c19.js  workerHelpers-aa2caa52.js
test/pkg/rollup/assets/: test_bg-fdccd79f.wasm
test/pkg/snippets/wasm-bindgen-rayon-7afa899f36665473/src/: workerHelpers.js  workerHelpers.no-bundler.js
test/pkg/webpack/: 107.js  517.js  971.js  index.html  index.js
test/src/: lib.rs
