[package]
name = "wasm-bindgen-rayon"
version = "0.1.0"
authors = ["Ingvar Stepanyan <rreverser@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Adapter for using Rayon-based concurrency on the Web"
keywords = ["web", "thread", "parallel", "concurrency", "performance", "webassembly"]
categories = ["concurrency", "webassembly", "web-programming"]

[dependencies]
crossbeam-channel = "0.5"
wasm-bindgen = "0.2"
rayon = "1.5"

[workspace]
members = ["test"]
