[package]
name = "wasm-bindgen-rayon"
version = "1.0.3"
authors = ["Ingvar Stepanyan <rreverser@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Adapter for using Rayon-based concurrency on the Web"
keywords = ["web", "thread", "parallel", "concurrency", "webassembly"]
categories = ["concurrency", "wasm", "web-programming"]
readme = "README.md"
exclude = [".github"]

[dependencies]
wasm-bindgen = "0.2"
rayon = "1.5"
spmc = "0.3.0"
js-sys = "0.3.48"

[workspace]
members = ["demo", "test"]

[features]
nightly = []
no-bundler = []

[package.metadata.docs.rs]
features = ["nightly"]
